--- a/html/nav_left.html
+++ b/html/nav_left.html
@@ -3,8 +3,8 @@
         <!-- Logo -->
         <li class="logo-sn">
             <div class="text-center">
-                <a href="#" class="pl-0 mt-2 mb-4_5">
-                    <img src="img/icon/logo.png" height="80">
+                <a href="#" class="pl-0 mt-2 mb-2">
+                    <img src="img/icon/logo.png" height="55">
                 </a>
             </div>
         </li>
@@ -18,6 +18,6 @@
     </ul>
     <div class="sidenav-bg mask-strong"></div>
     <div class="container-fluid fixed-bottom font-small text-white">
-        © 2019 Copyright: GEMS v2.0
+        © 2019 Copyright: CAE v1.0
     </div>
 </div>
