--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <link href="css/style.css" rel="stylesheet">
     <style>
         .intro-2 {
-            background: url("img/background/buildings.jpg")no-repeat center center fixed;
+            background: url("img/background/airplane.jpg")no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -41,8 +41,9 @@
 <body class="intro-2">
 <!-- Start your project here-->
 <div class="mx-3 mt-sm-3 mt-lg-5 mb-3">
-    <div class="flex-center flex-column">
-        <h1 class="text-center wow fadeInDown mb-0 mt-lg-5" data-wow-delay="0.3s"><img src="img/icon/logo.png" width="330"></h1>
+    <div class="flex-center flex-column float-lg-right mr-lg-5 pr-lg-5">
+        <h1 class="text-center wow fadeInDown mb-3 mt-lg-3" data-wow-delay="0.3s"><img src="img/icon/logo.png" width="250"></h1>
+        <h2 class="text-center wow fadeInLeft mb-4 text-dark" data-wow-delay="0.3s"><strong>Training Management System</strong></h2>
         <section class="form-elegant">
             <!--Form without header-->
             <div class="card card-cascade narrower mx-3 mb-3 wow fadeInLeft" data-wow-delay="0.6s">
@@ -74,7 +75,7 @@
                 <!--Footer-->
                 <div class="modal-footer mx-5 pt-2 mb-1">
                     <p class="font-small grey-text d-flex justify-content-center" style="width: 250px">
-                        © 2019 Copyright: GEMS v2.0
+                        © 2019 Copyright: CAE v1.0
                     </p>
                 </div>
             </div>
