course booker page

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Sistem Permohonan Cuti</title>
+    <title>CAE Training Management System</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <!-- Bootstrap core CSS -->
@@ -42,9 +42,9 @@
                 <h4 class="alert-heading"><i class="fa fas fa-bell"></i>&nbsp;&nbsp; Notification!</h4>
                 <p>You have <strong>3 pending tasks</strong>. Please click on the button below to take action.</p>
                 <hr>
-                <p class="mb-0">1. PPM Draft <strong>'Contract Bank Negara'</strong> <button class="btn btn-sm btn-warning" onclick="tambahAcara(0);">Continue <i class="fas fa-edit ml-1"></i></button></p>
-                <p class="mb-0">2. PPM <strong>'Hitachi Air-cond'</strong> to be verified<button class="btn btn-sm btn-dark-green" onclick="tambahAcara(1);">Process <i class="fas fa-arrow-right ml-1"></i></button></p>
-                <p class="mb-0">3. <strong>'19 pending PPM'</strong> assets to be checked <button class="btn btn-sm btn-danger" onclick="tambahAcara(2);">Pending PPM List <i class="fas fa-highlighter ml-1"></i></button></p>
+                <p class="mb-0">1. Instructor <strong>'Maisarah bin Ali'</strong> license will be expired in 7 days <button class="btn btn-sm btn-warning" onclick="tambahAcara(0);">Manage <i class="fas fa-user-tie ml-1"></i></button></p>
+                <p class="mb-0">2. Instructor <strong>'Hassan bin Abdul Talib'</strong> submitted 1 day leave <button class="btn btn-sm btn-dark-green" onclick="tambahAcara(1);">Approve <i class="fas fa-check ml-1"></i></button></p>
+                <p class="mb-0">3. New Course Booker received from <strong>'Air Asia Indonesia'</strong> <button class="btn btn-sm btn-danger" onclick="tambahAcara(2);">Details <i class="fas fa-file-signature ml-1"></i></button></p>
             </div>
         </section>
     </div>
