--- a/master_roster.html
+++ b/master_roster.html
@@ -46,7 +46,7 @@
                            data-content="All list available."><i class="fas fa-info mt-0 mx-1"></i></a>
                         <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2" title="Refresh data"><i class="fas fa-sync mt-0"></i></button>
                     </div>
-                    <a href="javascript:void(0);" class="text-white mx-3">Course Booker Applications</a>
+                    <a href="javascript:void(0);" class="text-white mx-3">Master Roster</a>
                     <div>
                         <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2 material-tooltip-main"><i class="fas fa-print mt-0"></i></button>
                         <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2 material-tooltip-main"><i class="fas fa-file-pdf mt-0"></i></button>
@@ -227,8 +227,6 @@
 <script type="text/javascript" src="js/vendor/datatables/js/jszip.min.js"></script>
 <script type="text/javascript" src="js/vendor/datatables/js/pdfmake.min.js"></script>
 <script type="text/javascript" src="js/vendor/datatables/js/vfs_fonts.js"></script>
-<!-- Stepper JavaScript - minified -->
-<script type="text/javascript" src="js/addons-pro/stepper.min.js"></script>
 
 <!--Custom scripts-->
 <script type="text/javascript">
