--- a/timetable_class.html
+++ b/timetable_class.html
@@ -44,7 +44,7 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-12 mr-0">
                             <div class="view view-cascade gradient-card-header amy-crisp-gradient z-depth-4">
-                                <h2 class="h2-responsive mb-0">Course's Schedule</h2>
+                                <h2 class="h2-responsive mb-0">Classroom's Schedule</h2>
                             </div>
                         </div>
                     </div>
@@ -59,28 +59,28 @@
                                     <div class="row">
                                         <div class="col-md-12 select-outline">
                                             <select class="mdb-select md-form md-outline colorful-select dropdown-info mt-0">
-                                                <option value="" disabled selected>Choose AOC</option>
-                                                <option value="1">MAA</option>
+                                                <option value="" disabled selected>Choose Classroom</option>
+                                                <option value="1">Yogyakarta</option>
+                                                <option value="1">Surabaya</option>
+                                                <option value="1">Bali</option>
+                                                <option value="1">Banda Aceh</option>
+                                                <option value="1">Bandung</option>
+                                                <option value="1">Bartam</option>
+                                                <option value="1">Main Hall</option>
+                                                <option value="1">Safety Lab</option>
                                             </select>
-                                            <label>AOC *</label>
+                                            <label>Classroom *</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12 select-outline">
                                             <select class="mdb-select md-form md-outline colorful-select dropdown-info mt-0">
-                                                <option value="" disabled selected>Choose Course</option>
-                                                <option value="1">A320 CC INITIAL</option>
+                                                <option value="" disabled selected>Choose Calendar Year</option>
+                                                <option value="1">2018</option>
+                                                <option value="1">2019</option>
+                                                <option value="1">2020</option>
                                             </select>
-                                            <label>Course *</label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12 select-outline">
-                                            <select class="mdb-select md-form md-outline colorful-select dropdown-info mt-0">
-                                                <option value="" disabled selected>Choose Batch</option>
-                                                <option value="1">310</option>
-                                            </select>
-                                            <label>Batch *</label>
+                                            <label>Calendar Year *</label>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -97,21 +97,15 @@
                         <div class="row py-3 px-2">
                             <div class="col-md-12">
                                 <dl class="row">
-                                    <dt class="col-sm-2">Course</dt>
-                                    <dd class="col-sm-5">A320 CC Initial (MAA) 2019</dd>
+                                    <dt class="col-sm-2">Classroom</dt>
+                                    <dd class="col-sm-5">Yogyakarta (In-flight room)</dd>
                                     <dt class="col-sm-2">Issue No.</dt>
                                     <dd class="col-sm-3">1298-M</dd>
 
-                                    <dt class="col-sm-2">Duration</dt>
-                                    <dd class="col-sm-5">10 June 2019 - 13 August 2019</dd>
+                                    <dt class="col-sm-2">Year</dt>
+                                    <dd class="col-sm-5">2019</dd>
                                     <dt class="col-sm-2">Date Issued</dt>
                                     <dd class="col-sm-3">8 June 2019</dd>
-
-                                    <dt class="col-sm-2">AOC</dt>
-                                    <dd class="col-sm-10">MAA</dd>
-
-                                    <dt class="col-sm-2">Batch</dt>
-                                    <dd class="col-sm-10">310</dd>
                                 </dl>
                             </div>
                         </div>
