--- a/instructor.html
+++ b/instructor.html
@@ -50,7 +50,7 @@
                             </div>
                             <div class="card-body card-body-cascade">
                                 <div class="card-body pt-3">
-                                    <h6>User Roles:</h6>
+                                    <h6>Instructor Today's Status:</h6>
                                     <div class="mt-1 pb-2">
                                         <ul class="striped list-unstyled pl-2">
                                             <li><a href="javascript:void(0);"><span class="bullet blue z-depth-2"></span> All Status <span class="badge blue float-right">34</span></a></li>
@@ -91,7 +91,7 @@
                                    data-content="User List for all users that use the system."><i class="fas fa-info mt-0 mx-1"></i></a>
                                 <button type="button" id="btnDtAszUserRefresh" class="btn btn-outline-white btn-rounded btn-sm px-2" data-toggle="tooltip" data-placement="top" title="Refresh data"><i class="fas fa-sync mt-0"></i></button>
                             </div>
-                            <a href="javascript:void(0);" class="text-white mx-3">Asset List</a>
+                            <a href="javascript:void(0);" class="text-white mx-3">Instructor List</a>
                             <div>
                                 <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2 material-tooltip-main"><i class="fas fa-print mt-0"></i></button>
                                 <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2 material-tooltip-main"><i class="fas fa-file-pdf mt-0"></i></button>
