--- a/master_roster.html
+++ b/master_roster.html
@@ -96,6 +96,9 @@
                                 </div>
                                 <div class="row mb-4">
                                     <div class="col-md-12">
+                                        <button type="button" class="btn btn-outline-orange btn-rounded waves-effect btn-sm z-depth-2 float-right">
+                                            Print <i class="fas fa-print ml-1"></i>
+                                        </button>
                                         <button type="button" class="btn btn-outline-cyan btn-rounded waves-effect btn-sm float-right z-depth-2">
                                             Search <i class="fas fa-search ml-1"></i>
                                         </button>
