--- a/timetable_class.html
+++ b/timetable_class.html
@@ -88,6 +88,9 @@
                                             <button type="button" class="btn btn-outline-cyan btn-rounded waves-effect btn-sm z-depth-2 mt-0">
                                                 Search <i class="fas fa-search ml-1"></i>
                                             </button>
+                                            <button type="button" class="btn btn-outline-orange btn-rounded waves-effect btn-sm z-depth-2 mt-0">
+                                                Print <i class="fas fa-print ml-1"></i>
+                                            </button>
                                         </div>
                                     </div>
                                 </form>
